[gd_scene load_steps=12 format=3 uid="uid://bhtxfoc44c866"]

[ext_resource type="Script" path="res://entities/player/playerController.gd" id="1_o1fl2"]
[ext_resource type="Script" path="res://entities/player/aimWeapon.gd" id="2_0jvtv"]
[ext_resource type="PackedScene" uid="uid://bkbco8j8tbbwl" path="res://ui/deathNerfChooser.tscn" id="3_7w32t"]
[ext_resource type="Texture2D" uid="uid://h6g1won56c82" path="res://entities/player/sprites/player1.png" id="3_qj4ba"]
[ext_resource type="Texture2D" uid="uid://bwcoir2f72ji8" path="res://entities/player/sprites/player4.png" id="4_fj24g"]
[ext_resource type="PackedScene" uid="uid://c4xfx6k5vl64x" path="res://ui/BarUi.tscn" id="4_orrsb"]
[ext_resource type="Texture2D" uid="uid://0qu0halqa21v" path="res://entities/player/sprites/player3.png" id="5_cayq7"]
[ext_resource type="Texture2D" uid="uid://rn2bdtnsd76v" path="res://entities/player/sprites/player2.png" id="6_ma7v8"]
[ext_resource type="PackedScene" uid="uid://c7jhmpawbftiv" path="res://ui/minimap/minimap.tscn" id="9_lhhii"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18u0x"]
size = Vector2(22, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ixgl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qj4ba")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qj4ba")
}, {
"duration": 1.0,
"texture": ExtResource("4_fj24g")
}, {
"duration": 1.0,
"texture": ExtResource("5_cayq7")
}, {
"duration": 1.0,
"texture": ExtResource("6_ma7v8")
}],
"loop": true,
"name": &"rollLeft",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qj4ba")
}, {
"duration": 1.0,
"texture": ExtResource("6_ma7v8")
}, {
"duration": 1.0,
"texture": ExtResource("5_cayq7")
}, {
"duration": 1.0,
"texture": ExtResource("4_fj24g")
}],
"loop": true,
"name": &"rollRight",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_o1fl2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_18u0x")

[node name="weaponHold" type="Node2D" parent="."]
script = ExtResource("2_0jvtv")

[node name="weapon" type="ColorRect" parent="weaponHold"]
offset_top = -3.0
offset_right = 29.0
offset_bottom = 3.0
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="Marker2D" type="Marker2D" parent="weaponHold"]
position = Vector2(26, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4ixgl")
animation = &"idle"

[node name="dashLength" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="dashCooldown" type="Timer" parent="."]
one_shot = true

[node name="shootCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="regenTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="regenSpeed" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Bar UI" parent="CanvasLayer" instance=ExtResource("4_orrsb")]

[node name="Minimap" parent="CanvasLayer" instance=ExtResource("9_lhhii")]

[node name="Death Nerf Chooser" parent="CanvasLayer" instance=ExtResource("3_7w32t")]
visible = false
size_flags_horizontal = 4

[connection signal="timeout" from="regenTimer" to="." method="_on_regen_timer_timeout"]
